# PPE_vis_detect_SkillProject_AI_Kostenko_Andriy

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  inference.py  logger.py  main.py  model_trainer.py  pdf_report_generator.py  pyproject.toml  settings.py
backend/docs/: backend.html  search.js
backend/docs/backend/: inference.html  logger.html  main.html  model_trainer.html  pdf_report_generator.html  settings.html
backend/routes/: detect_routes.py  report_routes.py
backend/schemas/: detect_schemas.py  report_shcemas.py
backend/tests/: test_all_routes.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
