[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "polars>=1.36.1",
    "psutil>=7.1.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.237",
    "ultralytics-thop>=2.0.18",
    "uvicorn>=0.38.0",
]
